# edr-project

./: Cargo.toml  EDR_FEATURE_ROADMAP.txt  README.md  UltraEDR_Technical_Security_Report.doc.txt  fake_malware.rs
.github/: copilot-instructions.md
configs/: config.toml
crates/agent/: Cargo.toml
crates/agent/benches/: edr_bench.rs
crates/agent/src/: lib.rs  main.rs  quick_bench.rs
crates/agent/tests/: proptest_config.rs  proptest_integrity.rs  proptest_log_integrity.proptest-regressions  proptest_log_integrity.rs  proptest_multi_vector.rs  proptest_self_integrity.rs
crates/carving/: Cargo.toml
crates/carving/src/: lib.rs
crates/process/: Cargo.toml
crates/process/fuzz/: Cargo.toml
crates/process/fuzz/fuzz_targets/: analyze_region.rs
crates/process/src/: lib.rs  region.rs
crates/process/tests/: integration.rs  proptest_analyze_region.rs  proptest_read_region.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/triage/: Cargo.toml
crates/triage/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
edr_kernel_evasion_test/: Cargo.toml
edr_kernel_evasion_test/src/: main.rs
edr_test_harness/: Cargo.toml
edr_test_harness/src/: main.rs
edr_ultimate_orchestrator/: Cargo.toml
edr_ultimate_orchestrator/scripts/: edr_lotl.sh  edr_nas_stress.sh  edr_resource_stress.sh  edr_tamper.sh
edr_ultimate_orchestrator/src/: main.rs
fake_malware/: Cargo.toml
fake_malware/src/: main.rs
project /crates/carving/: Cargo.toml
project /crates/process/: Cargo.toml
project /crates/triage/: Cargo.toml
(+2 files in other folders)
